Label bug fixed + attach the dropdown menu to the body when opened to make it compatible with a parent with overflow: hidden

--- a/css/advanced_select.less
+++ b/css/advanced_select.less
@@ -233,127 +233,7 @@
 		-webkit-transition: background-color 2s;
 	}
 
-	.advanced-select-drop {
-		width: 100%;
-		margin-top:-1px;
-		position: absolute;
-		z-index: 9999;
-		top: 100%;
-		left: 0px;
-
-		background: #fff;
-		color: #000;
-		border: 1px solid #aaa;
-		border-top: 0;
-
-		-webkit-border-radius: 0 0 4px 4px;
-		   -moz-border-radius: 0 0 4px 4px;
-				border-radius: 0 0 4px 4px;
-
-		-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
-		   -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
-			 -o-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
-				box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
-
-		.search {
-			display: inline-block;
-			width: 100%;
-			min-height: 22px;
-			margin: 0;
-			padding-left: 4px;
-			padding-right: 4px;
-
-			position: relative;
-			z-index: 10000;
-
-			white-space: nowrap;
-
-			input {
-				width: 100%;
-				height: auto !important;
-				min-height: 22px;
-				padding: 4px 20px 4px 5px;
-				margin: 0;
-
-				outline: 0;
-				font-family: sans-serif;
-				font-size: 1em;
-
-				border: 1px solid #aaa;
-				-webkit-border-radius: 0;
-				   -moz-border-radius: 0;
-						border-radius: 0;
-
-				-webkit-box-shadow: none;
-				   -moz-box-shadow: none;
-						box-shadow: none;
-
-				background: #fff url('../images/advanced-select.png') no-repeat 100% -22px;
-				background: url('../images/advanced-select.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-				background: url('../images/advanced-select.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-				background: url('../images/advanced-select.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-				background: url('../images/advanced-select.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-				background: url('../images/advanced-select.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-				background: url('../images/advanced-select.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-			}
-		}
-
-		.results {
-			max-height: 200px;
-			padding: 0 0 0 4px;
-			margin: 4px 4px 4px 0;
-			position: relative;
-			overflow-x: hidden;
-			overflow-y: auto;
-
-			ul {
-				margin: 0;
-				padding: 0;
-
-				& > li .label { 
-					padding-left: 20px;
-					& > li .label {
-						padding-left: 40px;
-						& > li .label {
-							padding-left: 60px;
-							& > li .label {
-								padding-left: 80px;
-							}
-						}
-					}
-				}
-			}
-
-			li {
-				list-style: none;
-				display: list-item;
-
-				&.with-children > .label {
-					font-weight: bold;
-				}
-
-				em {
-					background: #feffde;
-					font-style: normal;
-				}
-
-				& > .advanced-select-highlighted {
-					background: #3875d7;
-					color: #fff;
-
-					em {
-						background: transparent;
-					}
-				}
-			}
-
-			.label {
-				padding: 3px 7px 4px;
-				margin: 0;
-				cursor: pointer;
-			}
-		}
-	}
+	
 
 	&.advanced-select-dropdown-open {
 
@@ -413,10 +293,132 @@
 	}
 }
 
+.advanced-select-drop {
+	width: 100%;
+	margin-top:-1px;
+	position: absolute;
+	z-index: 9999;
+	top: 100%;
+	left: 0px;
+
+	background: #fff;
+	color: #000;
+	border: 1px solid #aaa;
+	border-top: 0;
+
+	-webkit-border-radius: 0 0 4px 4px;
+	   -moz-border-radius: 0 0 4px 4px;
+			border-radius: 0 0 4px 4px;
+
+	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+	   -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+		 -o-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+			box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+
+	.search {
+		display: inline-block;
+		width: 100%;
+		min-height: 22px;
+		margin: 0;
+		padding-left: 4px;
+		padding-right: 4px;
+
+		position: relative;
+		z-index: 10000;
+
+		white-space: nowrap;
+
+		input {
+			width: 100%;
+			height: auto !important;
+			min-height: 22px;
+			padding: 4px 20px 4px 5px;
+			margin: 0;
+
+			outline: 0;
+			font-family: sans-serif;
+			font-size: 1em;
+
+			border: 1px solid #aaa;
+			-webkit-border-radius: 0;
+			   -moz-border-radius: 0;
+					border-radius: 0;
+
+			-webkit-box-shadow: none;
+			   -moz-box-shadow: none;
+					box-shadow: none;
+
+			background: #fff url('../images/advanced-select.png') no-repeat 100% -22px;
+			background: url('../images/advanced-select.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+			background: url('../images/advanced-select.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+			background: url('../images/advanced-select.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+			background: url('../images/advanced-select.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+			background: url('../images/advanced-select.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+			background: url('../images/advanced-select.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+		}
+	}
+
+	.results {
+		max-height: 200px;
+		padding: 0 0 0 4px;
+		margin: 4px 4px 4px 0;
+		position: relative;
+		overflow-x: hidden;
+		overflow-y: auto;
+
+		ul {
+			margin: 0;
+			padding: 0;
+
+			& > li .label { 
+				padding-left: 20px;
+				& > li .label {
+					padding-left: 40px;
+					& > li .label {
+						padding-left: 60px;
+						& > li .label {
+							padding-left: 80px;
+						}
+					}
+				}
+			}
+		}
+
+		li {
+			list-style: none;
+			display: list-item;
+
+			&.with-children > .label {
+				font-weight: bold;
+			}
+
+			em {
+				background: #feffde;
+				font-style: normal;
+			}
+
+			& > .advanced-select-highlighted {
+				background: #3875d7;
+				color: #fff;
+
+				em {
+					background: transparent;
+				}
+			}
+		}
+
+		.label {
+			padding: 3px 7px 4px;
+			margin: 0;
+			cursor: pointer;
+		}
+	}
+}
+
 .advanced-select-container,
 .advanced-select-drop,
-.advanced-select-container .search,
-.advanced-select-container .search input{
+.advanced-select-drop .search,
+.advanced-select-drop .search input{
   /*
 	Force border-box so that % widths fit the parent
 	container without overlap because of margin/padding.
