--- a/test/css/index.less
+++ b/test/css/index.less
@@ -41,3 +41,11 @@ label {
 		overflow: auto;
 	}
 }
+
+.box {
+	border: 1px solid #ccc; 
+	background-color: #eee; 
+	width: 200px;
+	height: 50px;
+	overflow: hidden;
+}
